spread for array + object

--- a/es6 tutorial/destructuring_es6/obj_des.html
+++ b/es6 tutorial/destructuring_es6/obj_des.html
@@ -75,7 +75,7 @@
             printObjectProperly(items[i]);
         }
     }
-    function printObjectProperly({ id, name }) {
+    function printObjectProperly({ id, name }) {//obj destructuring
         console.log(`==> ${id} | ${name}`);
     }
     printResArr(response_new);
