callback function + promises

--- a/es6 tutorial/promise/example2.html
+++ b/es6 tutorial/promise/example2.html
@@ -5,7 +5,7 @@
     const fun1 = () => {//returning promise object
         const promiseObj = new Promise((resolve, reject) => {
             setTimeout(() => {
-                let flag = false;
+                let flag = true;
                 if (flag) {
                     resolve('Second Statement');
                 }
