--- a/es6 tutorial/promise/promise_loop.html
+++ b/es6 tutorial/promise/promise_loop.html
@@ -5,7 +5,7 @@
         let user_list_ids = [1,2,3];
         const getData = (id)=>{
           return fetch("https://reqres.in/api/users/"+id).then(response=>{
-            return response.json();
+            return response.json();//return promise
           }).catch(error=>{
             console.log("The error is : ",error);
           })
